@@ -9,6 +9,7 @@
                             Fuji SuperCCD: raw data extracted without 45-degree rotation.
                             New sample applications: 4channels and unprocessed_raw
                             Imported (subsequentally) new dcraw versions from 8.89 to 8.93 (up to date) 
+- New option to switch on/off auto brightness adjsutements.
                         
 0.4.0 - Released with KDE 4.2.0
 ------------------------------------------------------------------------
